--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+!
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
   <!-- <button class="btn-green">Green Button</button> -->
 
   <!-- Navbar -->
-
+  <nav></nav>
   <!-- End Navbar -->
 
   <!-- Hero Section -->
@@ -67,7 +67,10 @@
 
 
   <!-- Footer   -->
+  <footer>
 
+
+  </footer>
   <!-- End Footer  -->
 
 
