--- a/index.html
+++ b/index.html
@@ -1,79 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-!
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Website A31</title>
+  !
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Website A31</title>
 
-  <!-- Style -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/responsive.css">
-  <!-- End Style -->
+    <!-- Style -->
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+    <!-- End Style -->
 
-  <!-- Font Google -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Righteous&display=swap"
-    rel="stylesheet">
-  <!-- End Font Google -->
+    <!-- Font Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Righteous&display=swap"
+      rel="stylesheet"
+    />
+    <!-- End Font Google -->
+  </head>
 
-</head>
+  <body>
+    <!-- <button class="btn-green">Green Button</button> -->
 
-<body>
+    <!-- Navbar -->
+    <nav></nav>
+    <!-- End Navbar -->
 
-  <!-- <button class="btn-green">Green Button</button> -->
+    <!-- Hero Section -->
 
-  <!-- Navbar -->
-  <nav></nav>
-  <!-- End Navbar -->
+    <!-- End Hero Section -->
 
-  <!-- Hero Section -->
+    <!-- About Section  -->
+    <section id="about" class="about">
+      <div class="section-title">
+        <h1>About</h1>
+        <h2>About Our Team</h2>
+      </div>
+    </section>
 
-  <!-- End Hero Section -->
+    <!-- End About Section  -->
 
-  <!-- About Section  -->
-  <section id="about" class="about">
-    <div class="section-title">
-      <h1>About</h1>
-      <h2>About Our Team</h2>
-    </div>
+    <!-- Services Section  -->
+    <section id="services" class="services">
+      <div class="section-title">
+        <h1>Services</h1>
+        <h2>What we can do for you?</h2>
+      </div>
+    </section>
 
+    <!-- End Services Section  -->
 
-  </section>
+    <!-- Team Section  -->
 
-  <!-- End About Section  -->
+    <!-- End Team Section  -->
 
-  <!-- Services Section  -->
-  <section id="services" class="services">
-    <div class="section-title">
-      <h1>Services</h1>
-      <h2>What we can do for you?</h2>
-    </div>
+    <!-- Contact Section  -->
 
+    <!-- End Contact Section  -->
 
-  </section>
+    <!-- Footer   -->
+    <footer>
+      <div class="footer">
+        <!-- Tambahkan tag <div> dengan class "footer-logo" -->
+        <div class="footer-logo">A31</div>
 
-  <!-- End Services Section  -->
-
-  <!-- Team Section  -->
-
-  <!-- End Team Section  -->
-
-  <!-- Contact Section  -->
-
-  <!-- End Contact Section  -->
-
-
-  <!-- Footer   -->
-  <footer>
-
-
-  </footer>
-  <!-- End Footer  -->
-
-
-</body>
-
+        <!-- Tambahkan tag <div> dengan class "footer-list" -->
+        <div class="footer-list">
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Team</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer  -->
+    <div class="footer-bottom">Copyright All right reserved by A31 Team</div>
+  </body>
 </html>
