--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
       </div>
     </footer>
     <!-- End Footer  -->
-    <div class="footer-bottom">Copyright All right reserved by A31 Team</div>
+    <div class="footer-bottom">Copyright © All right reserved by A31 Team</div>
   </body>
 </html>
