--- a/index.html
+++ b/index.html
@@ -64,20 +64,24 @@
     <!-- Footer   -->
     <footer>
       <div class="footer">
-        <div class="footer-logo">A31</div>
+        <div class="container">
+          <div class="footer-logo">A31</div>
 
-        <div class="footer-list">
-          <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
-            <li>Team</li>
-            <li>Contact</li>
-          </ul>
+          <div class="footer-list">
+            <ul>
+              <li>Home</li>
+              <li>About</li>
+              <li>Services</li>
+              <li>Team</li>
+              <li>Contact</li>
+            </ul>
+          </div>
         </div>
       </div>
+      <!-- End Footer  -->
+      <div class="footer-bottom">
+        Copyright © All right reserved by A31 Team
+      </div>
     </footer>
-    <!-- End Footer  -->
-    <div class="footer-bottom">Copyright © All right reserved by A31 Team</div>
   </body>
 </html>
