--- a/index.html
+++ b/index.html
@@ -39,8 +39,19 @@
       <h1>About</h1>
       <h2>About Our Team</h2>
     </div>
-
-
+    <div class="container">
+      <div class="content-about">
+        <div class="img-about">
+          <img src="img/about-image.png" alt="#">
+        </div>
+        <div class="description">
+          <div class="text">
+            <p>The A31 team developer is a team that provides website, mobile, and game-based application development services. We also provide services for UI/UX design. A31 can collaborate with companies or communities to innovate to create applications</p>
+          </div>
+          <button class="btn-green">About US</button>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- End About Section  -->
