--- a/index.html
+++ b/index.html
@@ -154,7 +154,28 @@
 
 
   <!-- Footer   -->
+  <footer>
+    <div class="footer">
+      <div class="container">
+        <div class="footer-logo">
+          <span>A31</span>
+        </div>
 
+        <div class="footer-list">
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Team</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      Copyright © All right reserved by A31 Team
+    </div>
+  </footer>
   <!-- End Footer  -->
 
 
